# video

./: .gitignore  CMakeLists.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TECHNICAL.md  build.ps1  test_tool.ps1
src/: discord_compressor.cpp
